# Portfolio

Dean_Ford_GSE_output/Simulation_Data/: globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
Dean_Ford_GSE_source/Simulation/Assets/Material/: terrain.mat
Dean_Ford_GSE_source/Simulation/Assets/Scenes/: SampleScene.unity
Dean_Ford_GSE_source/Simulation/Assets/Scripts/: GenerateMap.cs  Simulation.cs
Dean_Ford_GSE_source/Simulation/Assets/Shader/: AddWater.compute  CalculateFlux.compute  CalculateNormals.compute  Erosion.compute  Evaporation.compute  HeightMapGenerator.compute  Terrain.shader  Transportation.compute  WaterSimulation.compute
Dean_Ford_GSE_source/Simulation/ProjectSettings/: ProjectSettings.asset
Game_Engine/: READ ME.txt
Game_Engine/myengine/src/game/: main.cpp
Physics_Simulation/: README.txt
Physics_Simulation/PFG-StartProject/src/: DynamicObject.cpp  DynamicObject.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  KinematicsObject.cpp  Scene.cpp  Scene.h  Utility.cpp  Utility.h
Raytracer/: ReadMe.txt
Raytracer/raytracer_cmake/: CMakeLists.txt
Raytracer/raytracer_cmake/src/raytracer/: Camera.cpp  Camera.h  Light.cpp  Light.h  MCG_GFX_Lib.cpp  Main.cpp  ObjectHit.cpp  ObjectHit.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Tracer.cpp  Tracer.h
